--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body, html {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
   }
+
+  /* home page  */
   
   .hero-image {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("image1.jpg");
@@ -40,3 +42,18 @@ body, html {
     background-color: orangered;
     color: white;
   }
+
+
+  /* Packages */
+
+
+
+  /* Testimonials */
+
+
+
+  /* Exploring */
+
+  
+
+  /* footer */
