--- a/style.css
+++ b/style.css
@@ -2,6 +2,12 @@ body{
   text-align: center;
 }
 
+
+.nav-item{
+  font-size: 1.1em;
+  font-weight: 600;
+}
+
 #title{
   background-image: url(image1.jpg);
   background-size: cover;
@@ -22,16 +28,47 @@ body{
   margin-left: 40px;
   margin-top: 30px;
 }
-/* .container-fluid{
-  padding:10% 5% 15% 50%;
-
-} */
 
 .btn-title{
   margin-top: 15px;
   margin-left: 40px;
 }
-.nav-item{
-  font-size: 1.1em;
-  font-weight: 600;
+
+/* footer */
+
+#footer{
+  background-color: black;
+  color: azure;
+  padding-bottom: 100px;
+}
+.row{
+  padding-top: 30px;
+}
+.footer-title{
+  color: orange;
+  font-size: 30px;
+  font-weight: bolder;
+  font-family: 'Times New Roman', Times, serif;
+}
+.font{
+  font-size: 1.5em;
+  position:relative;
+  bottom: 4px;
+  left: 30px;
+}
+.copywrite{
+  position: relative;
+  top: 80px;
+}
+.links{
+  color: azure;
+  text-decoration: none;
+  font-size: 1.2em; 
+}
+ul{
+  list-style-type: none;
+}
+.contact_detail{
+  padding-left: 30px;
+  font-size: 1.1em; 
 }
